--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
-name: Build RK3588 OrangePi 5 Plus
-
+name: Build Mediatek Filogic CMCC RAX3000M
 on:
   workflow_dispatch: # 支持手动选择平台
   push:
@@ -8,14 +7,12 @@ on:
     paths:
       - 'src/**'
       - 'build.sh'
-
 jobs:
-  build_rk3588:
+  build_mediatek_filogic:
     runs-on: ubuntu-22.04
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
-
     - name: Free Disk Space
       uses: jlumbroso/free-disk-space@main
       with:
@@ -24,7 +21,6 @@ jobs:
         dotnet: true
         large-packages: true
         swap-storage: true
-
     - name: Install Dependencies
       run: |
         sudo apt-get update
@@ -32,17 +28,14 @@ jobs:
           libncurses-dev libssl-dev ncurses-term openssl \
           python3 python3-setuptools python3-venv python3-pyelftools rsync subversion \
           swig time unzip wget zlib1g-dev
-
     - name: Run Build Script
       run: |
         chmod +x build.sh
-        # 强制指定: 平台索引 1 (RK3588), 格式 all (同时生成 ipk 和 apk)
-        # 这样比分两次跑 all all 要快一倍以上
-        ./build.sh all 1
-
-    - name: Upload RK3588 Artifacts
+        # 强制指定: 格式 ipk, 平台索引 0 (Mediatek Filogic CMCC RAX3000M)
+        ./build.sh ipk 0
+    - name: Upload Mediatek Filogic Artifacts
       uses: actions/upload-artifact@v4
       if: success()
       with:
-        name: rk3588-iptest-packages
+        name: mediatek-filogic-iptest-packages
         path: artifacts/
